# chat_box_v2

./: .env.production  .gitignore  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.prod.yml
backend/client/: CMakeLists.txt  README.md
backend/client/include/: .gitkeep  chat_client.h  protocol_handler.h
backend/client/src/: .gitkeep  chat_client.cpp  main.cpp  protocol_handler.cpp
backend/server/: BUILD_MYSQL.md  CMakeLists.txt  DEPENDENCIES.md  PUBSUB_USAGE.md  README.md
config/: .env.example  .gitignore  README.md
docs/: 01-QUICK_START.md  02-FEATURES.md  03-DEPLOYMENT.md  04-DATABASE.md  05-PROTOCOL.md  06-TESTING.md  FIXES_COMPLETED.md  README.md
frontend/: .env.example  CODE_ORGANIZATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: README.md  build_server.bat  build_server.sh  check_xplugin.ps1  install_dependencies.ps1  setup_mysql.ps1
test/: README.md  ai-manual-test.js  ai-test.js  check-dm-db.mjs  db-check.cjs  db-check.mjs  db-check2.mjs  dm-test.mjs  dm-test.ps1  jest.config.js  package-lock.json  package.json  playwright.config.ts  run-migrations.mjs  run-migrations2.mjs  run-tests.bat  run-tests.sh  simple-test.js  test-ai-production.mjs  websocket-test.js
test/e2e/: auth-flow.spec.ts  chat-ui.spec.ts
test/features/: ai-chatbot.test.js  chat-features.test.js  reactions-polls.test.js
test/integration/: websocket-integration.test.js
test/performance/: load-test.yml  stress-test.js
test/utils/: fixtures.js  jest.setup.js  (+1 more)
(+129 files in other folders)
